Stuff Visual Studio didnt track

--- a/BulkyBook/appsettings.json
+++ b/BulkyBook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "server=localhost;userid=uBBook;password=pBBook;database=bulkybook;"
   },
   "Logging": {
     "LogLevel": {
