--- a/BulkyBook.Models/BulkyBook.Models.csproj
+++ b/BulkyBook.Models/BulkyBook.Models.csproj
@@ -15,5 +15,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
   </ItemGroup>
 </Project>
